# FacDiggerNN

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
configs/: base.yaml
configs/data/: eodhd_all_world_pilot.yaml  eodhd_free.yaml  eodhd_historical_liquid.yaml
configs/datasets/: eodhd_all_world_pilot.yaml  eodhd_free_smoke.yaml  eodhd_historical_liquid.yaml  us_equities_daily_v1.yaml
configs/experiments/: e0_lightgbm_paid_pilot.yaml  e0_lightgbm_smoke.yaml  e0_mlp_smoke.yaml  e1_random.yaml  e1_random_paid_pilot.yaml  e1_random_smoke.yaml  e2_etth1.yaml  e2_etth1_smoke.yaml  e3_financial_pretrain.yaml  e3_financial_pretrain_smoke.yaml
configs/research/: m6_eodhd_engineering.yaml
docs/: IMPLEMENTATION_PLAN.md  PatchTST迁移学习实现设计文档_AI版.md  实验设计文档.md  开发文档.md
src/facdigger/: __init__.py  __main__.py  cli.py  config.py  environment.py
src/facdigger/data/: __init__.py  adapters.py  config.py  contracts.py  snapshots.py
src/facdigger/datasets/: __init__.py  index.py  sampler.py  splits.py  window.py
src/facdigger/evaluation/: __init__.py  compare.py  contracts.py  metrics.py  neutralization.py  report.py  runner.py
src/facdigger/experiments/: __init__.py  manifest.py
src/facdigger/features/: __init__.py  (+2 more)
tests/integration/: test_dataset_pipeline.py  test_e0_pipeline.py  test_e1_pipeline.py  test_e1_resume.py  test_e2_pipeline.py  test_e2_resume.py  test_e3_pipeline.py  test_e3_resume.py  test_lightgbm_replay.py  test_m6_folds.py  test_m6_runner.py
tests/unit/: test_config.py  test_environment.py  test_manifest.py  test_patchtst_adapter.py
(+57 files in other folders)
