[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "facdigger"
version = "0.1.0"
description = "Point-in-time machine-learning factor research for US equities"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "FacDiggerNN contributors" }]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
model = [
  "huggingface-hub>=0.23,<1",
  "safetensors>=0.4,<1",
  "torch>=2.2,<3",
  "transformers>=4.37,<6",
]
data = [
  "polars>=1,<2",
  "pyarrow>=16,<24",
]
eodhd = ["requests>=2.32,<3"]
baseline = ["lightgbm>=4,<5"]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
facdigger = "facdigger.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/facdigger"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
